examples/test/testpolicy12117.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12117
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key42: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value11
          key42: value17
      podSelector:
        matchLabels:
          key42: value32
          key0: value49
